[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/TutorialLevel/TutorialLevel.gd" type="Script" id=2]
[ext_resource path="res://UI/LevelSelector/LevelSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Themes/Theme16.tres" type="Theme" id=4]
[ext_resource path="res://Levels/TutorialLevel/Tutorial.gd" type="Script" id=5]
[ext_resource path="res://Art/UI/BannerScroll.png" type="Texture" id=6]

[node name="TutorialLevel" instance=ExtResource( 1 )]
script = ExtResource( 2 )
starting_gold = 164
LevelSelector = ExtResource( 3 )

[node name="Environment" parent="Tilesets" index="0"]
tile_data = PoolIntArray( -983026, 212, 0, -983025, 212, 0, -917491, 212, 0, -917490, 212, 0, -917489, 212, 0, -917488, 212, 0, -851956, 212, 0, -851955, 212, 0, -851954, 212, 0, -851953, 212, 0, -851952, 212, 0, -851951, 212, 0, -786421, 212, 0, -786420, 212, 0, -786419, 212, 0, -786418, 212, 0, -786417, 212, 0, -786416, 212, 0, -786415, 212, 0, -786414, 212, 0, -720886, 212, 0, -720885, 212, 0, -720884, 212, 0, -720883, 212, 0, -720882, 212, 0, -720881, 212, 0, -720880, 212, 0, -720879, 212, 0, -720878, 212, 0, -720877, 212, 0, -655351, 212, 0, -655350, 212, 0, -655349, 212, 0, -655348, 212, 0, -655347, 212, 0, -655346, 212, 0, -655345, 212, 0, -655344, 212, 0, -655343, 212, 0, -655342, 212, 0, -655341, 212, 0, -655340, 212, 0, -589816, 212, 0, -589815, 212, 0, -589814, 212, 0, -589813, 212, 0, -589812, 212, 0, -589811, 212, 0, -589810, 212, 0, -589809, 212, 0, -589808, 212, 0, -589807, 212, 0, -589806, 212, 0, -589805, 212, 0, -589804, 212, 0, -589803, 212, 0, -524281, 212, 0, -524280, 212, 0, -524279, 212, 0, -524278, 212, 0, -524277, 212, 0, -524276, 212, 0, -524275, 212, 0, -524274, 212, 0, -524273, 212, 0, -524272, 212, 0, -524271, 212, 0, -524270, 212, 0, -524269, 212, 0, -524268, 212, 0, -524267, 212, 0, -524266, 212, 0, -458746, 212, 0, -458745, 212, 0, -458744, 212, 0, -458743, 212, 0, -458742, 212, 0, -458741, 212, 0, -458740, 212, 0, -458739, 212, 0, -458738, 212, 0, -458737, 212, 0, -458736, 212, 0, -458735, 212, 0, -458734, 212, 0, -458733, 212, 0, -458732, 212, 0, -458731, 212, 0, -458730, 212, 0, -458729, 212, 0, -393211, 212, 0, -393210, 212, 0, -393209, 212, 0, -393208, 212, 0, -393207, 212, 0, -393206, 212, 0, -393205, 212, 0, -393204, 212, 0, -393203, 212, 0, -393202, 212, 0, -393201, 212, 0, -393200, 212, 0, -393199, 212, 0, -393198, 212, 0, -393197, 212, 0, -393196, 212, 0, -393195, 212, 0, -393194, 212, 0, -393193, 212, 0, -393192, 212, 0, -327676, 212, 0, -327675, 212, 0, -327674, 212, 0, -327673, 212, 0, -327672, 212, 0, -327671, 212, 0, -327670, 212, 0, -327669, 212, 0, -327668, 212, 0, -327667, 212, 0, -327666, 212, 0, -327665, 212, 0, -327664, 212, 0, -327663, 212, 0, -327662, 212, 0, -327661, 212, 0, -327660, 212, 0, -327659, 212, 0, -327658, 212, 0, -327657, 212, 0, -327656, 212, 0, -327655, 212, 0, -262141, 212, 0, -262140, 212, 0, -262139, 212, 0, -262138, 212, 0, -262137, 212, 0, -262136, 212, 0, -262135, 212, 0, -262134, 212, 0, -262133, 212, 0, -262132, 212, 0, -262131, 212, 0, -262130, 212, 0, -262129, 212, 0, -262128, 212, 0, -262127, 212, 0, -262126, 212, 0, -262125, 212, 0, -262124, 212, 0, -262123, 212, 0, -262122, 212, 0, -262121, 212, 0, -262120, 212, 0, -262119, 212, 0, -262118, 212, 0, -196606, 212, 0, -196605, 212, 0, -196604, 212, 0, -196603, 212, 0, -196602, 212, 0, -196601, 212, 0, -196600, 212, 0, -196599, 212, 0, -196598, 212, 0, -196597, 212, 0, -196596, 212, 0, -196595, 212, 0, -196594, 212, 0, -196593, 212, 0, -196592, 212, 0, -196591, 212, 0, -196590, 212, 0, -196589, 212, 0, -196588, 212, 0, -196587, 212, 0, -196586, 212, 0, -196585, 212, 0, -196584, 212, 0, -196583, 212, 0, -196582, 212, 0, -196581, 212, 0, -131071, 212, 0, -131070, 212, 0, -131069, 212, 0, -131068, 212, 0, -131067, 212, 0, -131066, 212, 0, -131065, 212, 0, -131064, 212, 0, -131063, 212, 0, -131062, 212, 0, -131061, 212, 0, -131060, 212, 0, -131059, 212, 0, -131058, 212, 0, -131057, 212, 0, -131056, 212, 0, -131055, 212, 0, -131054, 212, 0, -131053, 212, 0, -131052, 212, 0, -131051, 212, 0, -131050, 212, 0, -131049, 212, 0, -131048, 212, 0, -131047, 212, 0, -131046, 212, 0, -131045, 212, 0, -131044, 212, 0, -65536, 212, 0, -65535, 212, 0, -65534, 212, 0, -65533, 212, 0, -65532, 212, 0, -65531, 212, 0, -65530, 212, 0, -65529, 212, 0, -65528, 212, 0, -65527, 212, 0, -65526, 212, 0, -65525, 212, 0, -65524, 212, 0, -65523, 212, 0, -65522, 212, 0, -65521, 212, 0, -65520, 212, 0, -65519, 212, 0, -65518, 212, 0, -65517, 212, 0, -65516, 212, 0, -65515, 212, 0, -65514, 212, 0, -65513, 212, 0, -65512, 212, 0, -65511, 212, 0, -65510, 212, 0, -65509, 212, 0, -65508, 212, 0, -65507, 212, 0, 0, 212, 0, 1, 212, 0, 2, 212, 0, 3, 145, 0, 4, 204, 0, 5, 204, 0, 6, 204, 0, 7, 204, 0, 8, 204, 0, 9, 204, 0, 10, 204, 0, 11, 204, 0, 12, 204, 0, 13, 204, 0, 14, 204, 0, 15, 204, 0, 16, 204, 0, 17, 204, 0, 18, 204, 0, 19, 204, 0, 20, 204, 0, 21, 204, 0, 22, 204, 0, 23, 204, 0, 24, 204, 0, 25, 204, 0, 26, 204, 0, 27, 152, 0, 28, 212, 0, 29, 212, 0, 30, 212, 0, 65537, 212, 0, 65538, 212, 0, 65539, 212, 0, 65540, 212, 0, 65541, 212, 0, 65542, 212, 0, 65543, 212, 0, 65544, 212, 0, 65545, 212, 0, 65546, 212, 0, 65547, 212, 0, 65548, 212, 0, 65549, 212, 0, 65550, 212, 0, 65551, 212, 0, 65552, 212, 0, 65553, 212, 0, 65554, 212, 0, 65555, 212, 0, 65556, 212, 0, 65557, 212, 0, 65558, 212, 0, 65559, 212, 0, 65560, 212, 0, 65561, 212, 0, 65562, 212, 0, 65563, 212, 0, 65564, 212, 0, 65565, 212, 0, 65566, 212, 0, 65567, 212, 0, 131074, 212, 0, 131075, 212, 0, 131076, 212, 0, 131077, 212, 0, 131078, 212, 0, 131079, 212, 0, 131080, 212, 0, 131081, 212, 0, 131082, 212, 0, 131083, 212, 0, 131084, 212, 0, 131085, 212, 0, 131086, 212, 0, 131087, 212, 0, 131088, 212, 0, 131089, 212, 0, 131090, 212, 0, 131091, 212, 0, 131092, 212, 0, 131093, 212, 0, 131094, 212, 0, 131095, 212, 0, 131096, 212, 0, 131097, 212, 0, 131098, 212, 0, 131099, 212, 0, 131100, 212, 0, 131101, 212, 0, 131102, 212, 0, 131103, 212, 0, 196611, 212, 0, 196612, 212, 0, 196613, 212, 0, 196614, 212, 0, 196615, 212, 0, 196616, 212, 0, 196617, 212, 0, 196618, 212, 0, 196619, 212, 0, 196620, 212, 0, 196621, 212, 0, 196622, 212, 0, 196623, 212, 0, 196624, 212, 0, 196625, 212, 0, 196626, 212, 0, 196627, 212, 0, 196628, 212, 0, 196629, 212, 0, 196630, 212, 0, 196631, 212, 0, 196632, 212, 0, 196633, 212, 0, 196634, 212, 0, 196635, 212, 0, 196636, 212, 0, 196637, 212, 0, 196638, 212, 0, 262148, 212, 0, 262149, 212, 0, 262150, 212, 0, 262151, 212, 0, 262152, 212, 0, 262153, 212, 0, 262154, 212, 0, 262155, 212, 0, 262156, 212, 0, 262157, 212, 0, 262158, 212, 0, 262159, 212, 0, 262160, 212, 0, 262161, 212, 0, 262162, 212, 0, 262163, 212, 0, 262164, 212, 0, 262165, 212, 0, 262166, 212, 0, 262167, 212, 0, 262168, 212, 0, 262169, 212, 0, 262170, 212, 0, 262171, 212, 0, 262172, 212, 0, 262173, 212, 0, 327685, 212, 0, 327686, 212, 0, 327687, 212, 0, 327688, 212, 0, 327689, 212, 0, 327690, 212, 0, 327691, 212, 0, 327692, 212, 0, 327693, 212, 0, 327694, 212, 0, 327695, 212, 0, 327696, 212, 0, 327697, 212, 0, 327698, 212, 0, 327699, 212, 0, 327700, 212, 0, 327701, 212, 0, 327702, 212, 0, 327703, 212, 0, 327704, 212, 0, 327705, 212, 0, 327706, 212, 0, 327707, 212, 0, 327708, 212, 0, 393222, 212, 0, 393223, 212, 0, 393224, 212, 0, 393225, 212, 0, 393226, 212, 0, 393227, 212, 0, 393228, 212, 0, 393229, 212, 0, 393230, 212, 0, 393231, 212, 0, 393232, 212, 0, 393233, 212, 0, 393234, 212, 0, 393235, 212, 0, 393236, 212, 0, 393237, 212, 0, 393238, 212, 0, 393239, 212, 0, 393240, 212, 0, 393241, 212, 0, 393242, 212, 0, 393243, 212, 0, 458759, 212, 0, 458760, 212, 0, 458761, 212, 0, 458762, 212, 0, 458763, 212, 0, 458764, 212, 0, 458765, 212, 0, 458766, 212, 0, 458767, 212, 0, 458768, 212, 0, 458769, 212, 0, 458770, 212, 0, 458771, 212, 0, 458772, 212, 0, 458773, 212, 0, 458774, 212, 0, 458775, 212, 0, 458776, 212, 0, 458777, 212, 0, 458778, 212, 0, 524296, 212, 0, 524297, 212, 0, 524298, 212, 0, 524299, 212, 0, 524300, 212, 0, 524301, 212, 0, 524302, 212, 0, 524303, 212, 0, 524304, 212, 0, 524305, 212, 0, 524306, 212, 0, 524307, 212, 0, 524308, 212, 0, 524309, 212, 0, 524310, 212, 0, 524311, 212, 0, 524312, 212, 0, 524313, 212, 0, 589833, 212, 0, 589834, 212, 0, 589835, 212, 0, 589836, 212, 0, 589837, 212, 0, 589838, 212, 0, 589839, 212, 0, 589840, 212, 0, 589841, 212, 0, 589842, 212, 0, 589843, 212, 0, 589844, 212, 0, 589845, 212, 0, 589846, 212, 0, 589847, 212, 0, 589848, 212, 0, 655370, 212, 0, 655371, 212, 0, 655372, 212, 0, 655373, 212, 0, 655374, 212, 0, 655375, 212, 0, 655376, 212, 0, 655377, 212, 0, 655378, 212, 0, 655379, 212, 0, 655380, 212, 0, 655381, 212, 0, 655382, 212, 0, 655383, 212, 0, 720907, 212, 0, 720908, 212, 0, 720909, 212, 0, 720910, 212, 0, 720911, 212, 0, 720912, 212, 0, 720913, 212, 0, 720914, 212, 0, 720915, 212, 0, 720916, 212, 0, 720917, 212, 0, 720918, 212, 0, 786444, 212, 0, 786445, 212, 0, 786446, 212, 0, 786447, 212, 0, 786448, 212, 0, 786449, 212, 0, 786450, 212, 0, 786451, 212, 0, 786452, 212, 0, 786453, 212, 0, 851981, 212, 0, 851982, 212, 0, 851983, 212, 0, 851984, 212, 0, 851985, 212, 0, 851986, 212, 0, 851987, 212, 0, 851988, 212, 0, 917518, 212, 0, 917519, 212, 0, 917520, 212, 0, 917521, 212, 0, 917522, 212, 0, 917523, 212, 0, 983055, 212, 0, 983056, 212, 0, 983057, 212, 0, 983058, 212, 0, 1048592, 212, 0, 1048593, 212, 0 )

[node name="Details" parent="Tilesets" index="1"]
tile_data = PoolIntArray( -983026, 81, 0, -983025, 81, 0, -917491, 81, 0, -917490, 81, 0, -851956, 81, 0, -851955, 81, 0, -851954, 81, 0, -786420, 81, 0, -786419, 81, 0, -720886, 108, 0, -720883, 81, 0, -655351, 108, 0, -655350, 108, 0, -589816, 108, 0, -589815, 108, 0, -524279, 108, 0, -524278, 108, 0, -524277, 108, 0, -262130, 86, 0, -196606, 85, 0, -196594, 86, 0, -196593, 89, 0, -196592, 86, 0, -131071, 85, 0, -131070, 85, 0, -131069, 85, 0, -131057, 86, 0, -131056, 89, 0, -131055, 86, 0, -131046, 80, 0, -131045, 80, 0, -131044, 80, 0, -65536, 85, 0, -65535, 84, 0, -65534, 84, 0, -65533, 85, 0, -65520, 86, 0, -65519, 92, 0, -65512, 80, 0, -65511, 80, 0, -65510, 80, 0, -65509, 80, 0, -65508, 80, 0, -65507, 80, 0, 0, 85, 0, 1, 85, 0, 2, 85, 0, 28, 80, 0, 29, 80, 0, 30, 80, 0, 65537, 85, 0, 65538, 85, 0, 65539, 85, 0, 65540, 85, 0, 65546, 92, 0, 65547, 86, 0, 65548, 86, 0, 65549, 92, 0, 65562, 80, 0, 65563, 80, 0, 65564, 80, 0, 65565, 80, 0, 65566, 80, 0, 65567, 80, 0, 131074, 85, 0, 131082, 92, 0, 131083, 92, 0, 131084, 86, 0, 131085, 92, 0, 131100, 80, 0, 131101, 80, 0, 131102, 80, 0, 131103, 80, 0, 196620, 92, 0, 196637, 80, 0, 196638, 80, 0, 262173, 80, 0, 327699, 84, 0, 327700, 84, 0, 327701, 84, 0, 393235, 84, 0, 393236, 84, 0, 393237, 85, 0, 393238, 85, 0, 393239, 85, 0, 458772, 85, 0, 458773, 85, 0, 458774, 85, 0, 458775, 85, 0, 524309, 85, 0, 524310, 85, 0, 589845, 85, 0, 589847, 84, 0, 589848, 84, 0, 655382, 84, 0, 655383, 84, 0, 720912, 92, 0, 720913, 92, 0, 786447, 92, 0, 786448, 88, 0, 786449, 86, 0, 786450, 86, 0, 786451, 92, 0, 786452, 92, 0, 851982, 92, 0, 851983, 86, 0, 851984, 88, 0, 851985, 88, 0, 851986, 86, 0, 851987, 86, 0, 851988, 92, 0, 917518, 92, 0, 917519, 86, 0, 917520, 88, 0, 917521, 88, 0, 917522, 88, 0, 917523, 86, 0, 983055, 86, 0, 983056, 88, 0, 983057, 88, 0, 983058, 88, 0, 1048592, 88, 0, 1048593, 88, 0 )

[node name="1" parent="MapPaths/LevelPath1" index="0"]
position = Vector2( 192, 128 )

[node name="2" type="Position2D" parent="MapPaths/LevelPath1" index="1"]
position = Vector2( 1728, 896 )

[node name="Options" parent="OtherGUI/LevelFailedPopup/CenterContainer" index="0"]
margin_top = 380.0
margin_bottom = 700.0

[node name="LevelSelector" parent="OtherGUI/LevelFailedPopup/CenterContainer/Options" index="2"]
visible = false

[node name="Options" parent="OtherGUI/LevelPausedPopup/CenterContainer" index="0"]
margin_top = 380.0
margin_bottom = 700.0

[node name="LevelSelector" parent="OtherGUI/LevelPausedPopup/CenterContainer/Options" index="2"]
visible = false

[node name="StartWaveButton" parent="." index="10"]
margin_left = 320.0
margin_top = 64.0
margin_right = 545.0
margin_bottom = 139.0
disabled = true

[node name="PauseButton" parent="." index="11"]
visible = false

[node name="TutorialGUI" type="CanvasLayer" parent="." index="12"]

[node name="Tutorial" type="Control" parent="TutorialGUI" index="0"]
margin_left = 828.0
margin_top = 400.0
margin_right = 1084.0
margin_bottom = 656.0
script = ExtResource( 5 )

[node name="BannerScroll" type="Sprite" parent="TutorialGUI/Tutorial" index="0"]
scale = Vector2( 5.33333, 5.33333 )
texture = ExtResource( 6 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="TutorialGUI/Tutorial" index="1"]
margin_left = 40.0
margin_top = 77.0
margin_right = 216.0
margin_bottom = 192.0

[node name="Instructions" type="Label" parent="TutorialGUI/Tutorial/MarginContainer" index="0"]
unique_name_in_owner = true
margin_top = 50.0
margin_right = 176.0
margin_bottom = 65.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[connection signal="ended_wave" from="." to="TutorialGUI/Tutorial" method="_on_TutorialLevel_ended_wave"]
[connection signal="started_wave" from="." to="TutorialGUI/Tutorial" method="_on_TutorialLevel_started_wave"]
[connection signal="button_up" from="OtherGUI/LevelFailedPopup/CenterContainer/Options/Retry" to="TutorialGUI/Tutorial" method="_on_Retry_button_up"]

[editable path="OtherGUI/LevelFailedPopup"]
[editable path="OtherGUI/LevelFailedPopup/CenterContainer/Options/Retry"]
[editable path="OtherGUI/LevelFailedPopup/CenterContainer/Options/LevelSelector"]
[editable path="OtherGUI/LevelFailedPopup/CenterContainer/Options/MainMenu"]
[editable path="OtherGUI/LevelPausedPopup"]
[editable path="OtherGUI/LevelPausedPopup/CenterContainer/Options/Resume"]
[editable path="OtherGUI/LevelPausedPopup/CenterContainer/Options/LevelSelector"]
[editable path="OtherGUI/LevelPausedPopup/CenterContainer/Options/MainMenu"]
[editable path="StartWaveButton"]
[editable path="PauseButton"]
